# ax

./: .gitignore  .goreleaser.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPER_GUIDE.md  Makefile  README.md  go.mod  go.sum  main.go
crates/ax-agent/: Cargo.toml
crates/ax-agent/src/: claude.rs  codex.rs  launch.rs  lib.rs  runtime.rs  shell.rs  status.rs
crates/ax-agent/tests/: codex_home.rs  paths.rs
crates/ax-cli/: Cargo.toml
crates/ax-cli/src/: init.rs  main.rs  refresh.rs  status.rs  tasks.rs  workspace.rs
crates/ax-config/: Cargo.toml
crates/ax-config/src/: lib.rs  overlay.rs  paths.rs  schema.rs  tree.rs  validate.rs
crates/ax-config/tests/: overlay_apply.rs  path_helpers.rs  tree_loading.rs  validation.rs  yaml_compat.rs
crates/ax-daemon/: Cargo.toml
crates/ax-daemon/src/: atomicfile.rs  daemonutil.rs  git_status.rs  handlers.rs  history.rs  lib.rs  memory.rs  pure_decisions.rs  queue.rs  registry.rs  server.rs  session_manager.rs  shared_values.rs  socket_path.rs  task_helpers.rs  task_store.rs  team_reconfigure.rs  team_state_store.rs  usage_trends.rs  wake_scheduler.rs
crates/ax-daemon/tests/: memory.rs  mvp_flow.rs  tasks.rs  tasks_dispatch.rs  team_reconfigure.rs  usage_trends.rs  wake_scheduler_e2e.rs
crates/ax-tui/: COLOR_UX_PLAN.md  Cargo.toml
crates/ax-tui/src/: actions.rs  agents.rs  app.rs  captures.rs  daemon.rs  input.rs  lib.rs  render.rs  sidebar.rs  state.rs  stream.rs  tasks.rs  terminal.rs  theme.rs  tokens.rs
crates/ax-usage/: Cargo.toml
crates/ax-usage/src/: aggregator.rs  codex.rs  history.rs  lib.rs  parse.rs
crates/ax-usage/tests/: aggregator.rs  codex.rs  parse.rs  query_history.rs
crates/ax-workspace/: Cargo.toml
crates/ax-workspace/src/: dispatch.rs  instructions.rs  lib.rs  lifecycle.rs  manager.rs  mcp_config.rs  orchestrator.rs  orchestrator_prompt.rs  reconcile.rs
crates/ax-workspace/tests/: dispatch.rs  instructions.rs  lifecycle.rs  manager.rs  mcp_config.rs  orchestrator_prompt.rs  reconcile.rs
e2e/: Cargo.toml  README.md  orchestration_codex_live_test.go  orchestration_codex_live_test_test.go
e2e/scenarios/delegated_split/: SPEC.md  prompt.txt  validate.sh
e2e/scenarios/delegated_split/.ax/: config.yaml
e2e/scenarios/hello_workspace/: SPEC.md  prompt.txt  validate.sh
e2e/scenarios/hello_workspace/.ax/: config.yaml
e2e/scenarios/init_and_implement/: SPEC.md  prompt.txt  validate.sh
e2e/scenarios/init_and_implement/greeter/: README.md
e2e/scenarios/init_domain_auto/: README.md  validate.sh
e2e/scenarios/init_domain_auto/inventory/: README.md
e2e/scenarios/init_domain_auto/orders/: README.md
e2e/scenarios/init_domain_auto/users/: README.md
e2e/scenarios/init_domain_force_role/: README.md  validate.sh
e2e/scenarios/init_domain_force_role/inventory/: README.md
e2e/scenarios/init_domain_force_role/orders/: README.md
e2e/scenarios/init_domain_force_role/users/: README.md
e2e/scenarios/init_reconfigure_add/: README.md  validate.sh
e2e/scenarios/init_reconfigure_add/.ax/: config.yaml
e2e/scenarios/init_reconfigure_add/backend/: go.mod
e2e/scenarios/init_reconfigure_add/frontend/: package.json
e2e/scenarios/init_reconfigure_add/infra/: main.tf
e2e/scenarios/init_role_auto/: README.md  validate.sh
e2e/scenarios/init_role_auto/backend/: go.mod
e2e/scenarios/init_role_auto/frontend/: package.json
e2e/scenarios/init_role_auto/infra/: main.tf
e2e/src/: harness.rs  lib.rs
e2e/testdata/tasknote/: SPEC.md
e2e/testdata/tasknote/.ax/: config.yaml
e2e/testdata/tasknote/cli/: go.mod
e2e/testdata/tasknote/core/: go.mod
e2e/testdata/tasknote/core/tasknote/: tasknote.go  tasknote_test.go
e2e/tests/: config_safety_caps.rs  daemon_roundtrip.rs  init_and_orchestrate_live.rs  init_live.rs  multi_agent_collaboration_roundtrip.rs  orchestration_live.rs  peer_awareness_roundtrip.rs  task_lifecycle_roundtrip.rs  usage_probe.rs
rs/: Cargo.toml
rs/crates/ax-agent/: Cargo.toml
rs/crates/ax-agent/src/: claude.rs  codex.rs  lib.rs  shell.rs
rs/crates/ax-agent/tests/: paths.rs
rs/crates/ax-cli/: Cargo.toml
rs/crates/ax-cli/src/: daemon_client.rs  init.rs  main.rs  refresh.rs  status.rs  tasks.rs  workspace.rs
rs/crates/ax-config/src/: lib.rs  paths.rs  schema.rs  tree.rs  validate.rs
rs/crates/ax-config/tests/: overlay_apply.rs  path_helpers.rs  tree_loading.rs
rs/crates/ax-config/tests/fixtures/: sample_config.yaml
rs/crates/ax-daemon/: Cargo.toml
rs/crates/ax-daemon/src/: atomicfile.rs  handlers.rs  lib.rs  memory.rs  queue.rs  registry.rs  server.rs  session_manager.rs  shared_values.rs  socket_path.rs  task_helpers.rs  task_store.rs  team_reconfigure.rs  wake_scheduler.rs
rs/crates/ax-daemon/tests/: mvp_flow.rs  persistence.rs  shared_values.rs  tasks.rs  tasks_dispatch.rs
rs/crates/ax-mcp-server/: Cargo.toml
rs/crates/ax-mcp-server/src/: daemon_client.rs  lib.rs  memory_scope.rs  server.rs
rs/crates/ax-mcp-server/tests/: tools_memory_messages.rs  tools_shared_workspace.rs
rs/crates/ax-proto/: Cargo.toml
rs/crates/ax-proto/src/: envelope.rs  lib.rs  payloads.rs  responses.rs  types.rs
rs/crates/ax-proto/tests/: go_compat.rs
rs/crates/ax-proto/tests/fixtures/: cancel_task.json  create_task.json  intervene_task.json  lifecycle_target.json  memory.json  message.json  register.json  register_minimal.json  resp_agent_lifecycle.json  (+5 more)
rs/crates/ax-tmux/: Cargo.toml
rs/crates/ax-tmux/src/: keys.rs  lib.rs  sessions.rs
rs/crates/ax-tmux/tests/: parsing.rs
rs/crates/ax-tui/: Cargo.toml
rs/crates/ax-tui/src/: actions.rs  app.rs  captures.rs  input.rs  lib.rs  render.rs  sidebar.rs  state.rs  stream.rs  tasks.rs  terminal.rs  tokens.rs
rs/crates/ax-usage/src/: codex.rs  history.rs  lib.rs  parse.rs
rs/crates/ax-usage/tests/: aggregator.rs  history.rs  parse.rs
rs/crates/ax-workspace/: Cargo.toml
rs/crates/ax-workspace/src/: dispatch.rs  lib.rs  lifecycle.rs  manager.rs  mcp_config.rs  orchestrator.rs  orchestrator_prompt.rs  reconcile.rs
rs/crates/ax-workspace/tests/: dispatch.rs  manager.rs  mcp_config.rs  orchestrator.rs  reconcile.rs
(+217 files in other folders)
