[package]
name = "ax-e2e"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "End-to-end / integration tests that span multiple ax crates (daemon + tmux + config)."

[lints]
workspace = true

[dependencies]
tempfile = "3"
thiserror = { workspace = true }

[dev-dependencies]
ax-config = { path = "../crates/ax-config" }
ax-daemon = { path = "../crates/ax-daemon" }
ax-proto = { path = "../crates/ax-proto" }
ax-tmux = { path = "../crates/ax-tmux" }
ax-workspace = { path = "../crates/ax-workspace" }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
