[workspace]
resolver = "2"
members = [
    "crates/ax-cli",
    "crates/ax-agent",
    "crates/ax-config",
    "crates/ax-daemon",
    "crates/ax-mcp-server",
    "crates/ax-proto",
    "crates/ax-tmux",
    "crates/ax-usage",
    "crates/ax-workspace",
]

[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/ashon/ax"

[workspace.lints.rust]
unused_must_use = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
hex = "0.4"
sha1 = "0.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
serde_yml = "0.0.12"
thiserror = "2"

[profile.release]
lto = "thin"
codegen-units = 1
