[package]
name = "ax-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime identity + path helpers for ax agent bootstrap"

[dependencies]
ax-config = { path = "../ax-config" }
ax-proto = { path = "../ax-proto" }
ax-tmux = { path = "../ax-tmux" }
chrono.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
