[package]
name = "ax-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ax CLI entrypoint — workspace lifecycle, MCP server, tasks, and the watch TUI"

[[bin]]
name = "ax"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ax-agent = { path = "../ax-agent" }
ax-config = { path = "../ax-config" }
ax-daemon = { path = "../ax-daemon" }
ax-mcp-server = { path = "../ax-mcp-server" }
ax-proto = { path = "../ax-proto" }
ax-tmux = { path = "../ax-tmux" }
ax-tui = { path = "../ax-tui" }
ax-workspace = { path = "../ax-workspace" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "signal", "io-std"] }

[dev-dependencies]
tempfile = "3"
