[package]
name = "ax-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ax config loader + project tree + managed overlay"

[dependencies]
serde.workspace = true
serde_yml.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
