[package]
name = "ax-daemon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
ax-agent = { path = "../ax-agent" }
ax-config = { path = "../ax-config" }
ax-proto = { path = "../ax-proto" }
ax-tmux = { path = "../ax-tmux" }
ax-usage = { path = "../ax-usage" }
ax-workspace = { path = "../ax-workspace" }
chrono = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
ax-tmux = { path = "../ax-tmux" }
chrono = { workspace = true }
hex = { workspace = true }
sha1 = { workspace = true }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs", "test-util"] }
