[package]
name = "ax-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ratatui-based watch TUI for ax"

[lints]
workspace = true

[dependencies]
ax-config = { path = "../ax-config" }
ax-daemon = { path = "../ax-daemon" }
ax-proto = { path = "../ax-proto" }
ax-tmux = { path = "../ax-tmux" }
ax-workspace = { path = "../ax-workspace" }
chrono = { workspace = true }
crossterm = "0.28"
ratatui = { version = "0.29", default-features = false, features = ["all-widgets", "crossterm"] }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
throbber-widgets-tui = "0.8.0"

[dev-dependencies]
tempfile = "3"
