[package]
name = "ax-workspace"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
ax-agent = { path = "../ax-agent" }
ax-config = { path = "../ax-config" }
ax-proto = { path = "../ax-proto" }
ax-tmux = { path = "../ax-tmux" }
hex.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
sha1.workspace = true
thiserror = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
tempfile = "3"
