[package]
name = "ax-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime identity + path helpers for ax agent bootstrap (Rust port of internal/agent)"

[dependencies]
ax-config = { path = "../ax-config" }
hex.workspace = true
sha1.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
