[package]
name = "ax-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ratatui-based watch TUI for ax (port of cmd/watch_*.go)"

[lints]
workspace = true

[dependencies]
ax-config = { path = "../ax-config" }
ax-daemon = { path = "../ax-daemon" }
ax-proto = { path = "../ax-proto" }
ax-tmux = { path = "../ax-tmux" }
ax-workspace = { path = "../ax-workspace" }
chrono = { workspace = true }
crossterm = "0.28"
ratatui = "0.29"
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
