[package]
name = "ax-workspace"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
ax-agent = { path = "../ax-agent" }
ax-config = { path = "../ax-config" }
ax-tmux = { path = "../ax-tmux" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
